--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-/target
-/lib
-/classes
-/checkouts
+target
+lib
+classes
+checkouts
 pom.xml
 *.jar
 *.class
-/.lein-*
+.lein-*
 profiles.clj
-/.env
+.env
 .nrepl-port
-/log
+log
+*.log
